[#159722059] create additional posting features
What does this PR do?
enables the user to Upvote or downvote answers on a question or the question itself.

Description of Task to be completed?
create a question details page where users can, Up-vote or down-vote on the answers and finally give their own version of answer or comment on the questions.
How should this be manually tested?
Cloning this repo
https://github.com/jeffandeko/StackOverflow-lite_App

Pivotal tracker stories link.

--- a/Ask_question.html
+++ b/Ask_question.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Jeff Andeko's UI for StackOverflow-lite">
     <meta name="keywords" content="user interface, using html and css">
     <meta name="author" content="Jeff Andeko">
-    <title> Questions |StackOverflow-lite | Welcome to a platform where developers engage to build one another </title>
+    <title> Ask Questions |StackOverflow-lite | Welcome to a platform where developers engage to build one another </title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
@@ -25,9 +25,6 @@
     </div>
 </header>
 <main class="main">
-
-
-     <h2>Recent Questions</h2>
               <div class="quiz_details">
                     <h3>Ask a question</h3>
         <form class="answer" action="index.html" method="post">
@@ -35,9 +32,6 @@
             <button type="button" name="answer_btn" class="signing_button1">click to submit</button>
         </form>
     </div>
-
-
-
 </main>
 
 </body>
