--- a/question_details.html
+++ b/question_details.html
@@ -34,10 +34,12 @@
                        </div>
 
                       <div class="homeQuiz_area">
-                      <span class="likes"><a href="#"><i class="material-icons">thumb_up</i></a></span>
-                      <span class="dislikes"><a href="#"><i class="material-icons">thumb_down</i></a></span>
-                      <span class="date%time"><i class="material-icons">comment</i></span>
-                      <span class="dislikes"><a href="#"><i class="material-icons">delete_forever</i></a></span>
+                          <span class="important"><a href="#"><i class="material-icons">star</i></a></span>
+                          <span class="likes"><a href="#"><i class="material-icons">thumb_up</i></a></span>
+                          <span class="dislikes"><a href="#"><i class="material-icons">thumb_down</i></a></span>
+                          <span class="date%time"><i class="material-icons">comment</i></span>
+                          <span class="dislikes"><a href="#"><i class="material-icons">delete_forever</i></a></span>
+
                       </div>
                   </div>
                   <div class="clear"></div>
@@ -48,6 +50,7 @@
                           Ut enim ad minim veniam, quis nostrud exercitation ullamco  .</p>
                       <span class="likes"><a href="#"><i class="material-icons">thumb_up</i></a></span>
                       <span class="dislikes"><a href="#"><i class="material-icons">thumb_down</i></a></span>
+                       <span class="important"><a href="#"><i class="material-icons">stars</i></a></span>
                   </div>
                   <!-- comment area-->
                    <div class="comment_div">
